--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "include": [
         "src/**/*"
     ],
+    "paths": {
+      "*" : ["./types/*"]
+    },  
     "exclude": [
         "node_modules",
         "**/*.spec.ts",
