--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
     "build": "npm build",
     "lint": "eslint '.src/**/*.{js,ts,tsx}'",
     "lint:fix": "npm run lint --fix",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "test:coverage": "npm run test -- --coverage",
     "check-updates": "ncu -u"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "git-cz": "^4.7.6",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "npm-check-updates": "^11.5.4",
     "typescript": "^4.2.4"
-  },
-  "dependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4"
   },
   "husky": {
     "hooks": {
@@ -34,7 +38,9 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "eslint --fix"
+      "npm run format",
+      "npm run lint:fix",
+      "git add"
     ]
   }
 }
