--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "git-cz": "^4.7.6",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "npm-check-updates": "^11.5.4",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "husky": {
