--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
   "jest": {
     "transform": {
       "^.+\\.(js|jsx|ts|tsx|mjs)$": "babel-jest"
-    }
+    },
+    "setupFiles": [
+      "./setupTests.js"
+    ]
   },
   "husky": {
     "hooks": {
