--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,18 @@
 {
-  "semi": true,
-  "trailingComma": "none",
-  "singleQuote": true,
-  "printWidth": 120
+    "semi": true,
+    "trailingComma": "none",
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "importOrder": [
+        "<THIRD_PARTY_MODULES>",
+        "^components/(.*)$",
+        "^utils/(.*)$",
+        "^assets/(.*)$",
+        "^@fontsource/(.*)$",
+        "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
 }
